crates/oxc_css_parser/tests/error/value/url/parens.snap
---
source: crates/oxc_css_parser/tests/error.rs
---
error: invalid URL
  ┌─ parens.css:2:19
  │
2 │   background: url(get());
  │                   ^^^


